tests/fixtures/positive/compose/ComposeRawTextLiteral.kt
package test

import androidx.compose.material3.Text
import androidx.compose.runtime.Composable

@Composable
fun Header() {
	Text("Welcome")
}
